--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Changes for 4.0.35
+
+4.0.35rc1 was released as 4.0.33 without any changes
+
+--------------------------------------------------------------------------------
 Changes for 4.0.35rc1
 
 New features:
