--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Changes for 4.0.36rc1
+
+New features:
+
+Bug fixes:
+
+--------------------------------------------------------------------------------
 Changes for 4.0.35
 
 4.0.35rc1 was released as 4.0.35 without any changes
