.......... [ZBXNEXT-826] updated release date and version [4.0.36]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Changes for 4.0.36
+
+4.0.36rc1 was released as 4.0.36 without any changes
+
+--------------------------------------------------------------------------------
 Changes for 4.0.36rc1
 
 Bug fixes:
