--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Changes for 4.0.37rc1
+
+New features:
+
+Bug fixes:
+
+--------------------------------------------------------------------------------
 Changes for 4.0.36
 
 4.0.36rc1 was released as 4.0.36 without any changes
