.......... [ZBXNEXT-826] updated release date and version [4.0.37]

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,14 @@
+Changes for 4.0.37
+
+4.0.37rc1 was released as 4.0.37 without any changes
+
+--------------------------------------------------------------------------------
 Changes for 4.0.37rc1
 
 Bug fixes:
 ..F....... [ZBX-20382] updated jquery version (ashubin)
+.....J.... [ZBX-20383] updated logback-core, logback-classic and slf4j-api jars to the latest stable versions (vso)
+..F.I..... [ZBX-20384] fixed possibility to view setup pages by non-superadmin if config already file exists (averza)
 
 --------------------------------------------------------------------------------
 Changes for 4.0.36
